update UI and file readme

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,6 @@
 
   &__caption {
     display: none;
-    overflow: hidden;
 
     &[contentEditable="true"][data-placeholder]::before {
       position: absolute !important;
@@ -69,8 +68,6 @@
   }
 
   &__alt {
-    overflow: hidden;
-
     &[contentEditable="true"][data-placeholder]::before {
       position: absolute;
       content: attr(data-placeholder);
@@ -78,11 +75,17 @@
       font-weight: normal;
       display: none;
     }
+
     &[contentEditable="true"][data-placeholder]:empty {
       &::before {
         display: block;
       }
+
       &:focus::before {
+        display: none;
+      }
+
+      &::after {
         display: none;
       }
     }
@@ -177,6 +180,12 @@
 
   &--caption {
     ^&__caption {
+      display: block;
+    }
+  }
+
+  &--alt {
+    ^&__alt {
       display: block;
     }
   }
